--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,10 @@ before_install:
   - docker build -t sbl .
   - chmod -R a+w .
 
+env:
+  - BUILD_TARGET=qemu
+  - BUILD_TARGET=apl
+
 script:
-  - docker run --rm -v ${PWD}:/tmp/sbl -w /tmp/sbl --network=host sbl ./BuildLoader.py build qemu
+  - docker run --rm -v ${PWD}:/tmp/sbl -w /tmp/sbl --network=host sbl ./BuildLoader.py build $BUILD_TARGET
+
