Use FSP INF file to guide FSP binary copy from repo
This patch utilizes information from FspBin.inf to checkout specific
tag from FSP repo and copy files to SBL source tree.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,14 @@ ConfigDataStruct.h
 ConfigDataCommonStruct.h
 CfgDataDef.bsf
 ResetVector.ia32.raw
-FSP_?.bin
+Fsp.bsf
+FspDbg.bin
+FspRel.bin
 /Outputs
 /Stitch
 /Build
 /Conf
+/PayloadPkg/PayloadBins
 Platform/ApollolakeBoardPkg/VbtBin
-Silicon/ApollolakePkg/FspBin
-Silicon/QemuSocPkg/FspBin/*
-!Silicon/QemuSocPkg/FspBin/Patches
 Platform/CoffeelakeBoardPkg/VbtBin
-Silicon/CoffeelakePkg/FspBin
 Silicon/CoffeelakePkg/Microcode/*.mcb
