--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ FspRel.bin
 /PayloadPkg/PayloadBins
 Platform/ApollolakeBoardPkg/VbtBin
 Platform/CoffeelakeBoardPkg/VbtBin
+Silicon/ApollolakePkg/Include/Fsp*.h
+Silicon/CoffeelakePkg/Include/Fsp*.h
 Silicon/CoffeelakePkg/Microcode/*.mcb
