Enable more build options in travis
Current travis build only performs debug build with python 2.
This patch allows to test debug and release build, python2 and
python3 build.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
   - chmod -R a+w .
 
 env:
-  - BUILD_TARGET=qemu
-  - BUILD_TARGET=apl
-  - BUILD_TARGET=cfl
+  - BUILD_TARGET=qemu  PYTHON_VER=2
+  - BUILD_TARGET=apl   PYTHON_VER=2  BUILD_REL=-r
+  - BUILD_TARGET=apl   PYTHON_VER=3
+  - BUILD_TARGET=cfl   PYTHON_VER=2
+  - BUILD_TARGET=cfl   PYTHON_VER=3  BUILD_REL=-r
 
 script:
-  - docker run --rm -v ${PWD}:/tmp/sbl -w /tmp/sbl --network=host sbl ./BuildLoader.py build $BUILD_TARGET
-
+  - docker run --rm -v ${PWD}:/tmp/sbl -w /tmp/sbl --network=host sbl python${PYTHON_VER} ./BuildLoader.py build ${BUILD_REL} ${BUILD_TARGET}
