added /Download to .gitignore
Signed-off-by: Michael Millsap <michael.g.millsap@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ FspRel.bin
 /Stitch
 /Build
 /Conf
+/Download
 /PayloadPkg/PayloadBins
 Platform/ApollolakeBoardPkg/VbtBin
 Platform/CoffeelakeBoardPkg/VbtBin
