Add SBL x64 build for VTF
This an initial patch to add x64 build for SBL.  A new build flag
'-x64' is added to indicate x64 arch build. This cannot be fully
used at this moment because it has many dependencies on other x64
libraries. Only VTF reset vector x64 build is tested.

VTF x64 flow is different from IA32.  It switches to 32 bit
mode as usual and then calls into FspTempRamInit to set up CAR.
Once CAR is ready, it builds 4GB identical mapping page table for
x64 and then switches to x64 long mode. Finally, it locates the
STAGE1A entry point and tranfers the control to STAGE1A in pure
64 bit mode.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ ConfigDataDynamic.h
 ConfigDataStruct.h
 ConfigDataCommonStruct.h
 CfgDataDef.bsf
-ResetVector.ia32.raw
+ResetVector.*.raw
 Fsp.bsf
 FspDbg.bin
 FspRel.bin
