Add payload module support in OsLoader
This patch added support to launch payload module on top of OsLoader.
Comparing with payload binary, payload module will utilize the API
services provided by OsLoader, so it will have smaller size. Other
than this, the concept is exactly same as normal payload. For payload
module, additional parameter is required to pass into the payload
module entry point.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Platform/ApollolakeBoardPkg/VbtBin
 Silicon/ApollolakePkg/Include/Fsp*.h
 Silicon/CoffeelakePkg/Include/Fsp*.h
 Silicon/CoffeelakePkg/Microcode/*.mcb
+PayloadModPkg
