Represent data in required format in ConfigEditor
Current ConfigEditor relies on the original input data format in YAML
to determine how to represent data in GUI. For example, if the data
value is HEX in YAML, then the data will be displayed in HEX format.
This patch switched to use the specified format type to reformat the
value string so that the display is always consistent with the required
format type.

It fixed #844.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/Platform/ApollolakeBoardPkg/CfgData/CfgData_CapsuleInformation.yaml
+++ b/Platform/ApollolakeBoardPkg/CfgData/CfgData_CapsuleInformation.yaml
@@ -46,7 +46,7 @@
       value        : 0
   - SwPart       :
       name         : Software Partition
-      type         : EditNum, INT, (0,127)
+      type         : EditNum, DEC, (0,127)
       help         : >
                      Specify software partition number
       length       : 0x01
