--- a/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
+++ b/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
@@ -69,7 +69,7 @@ BOOT_OPTION_TMPL: >
         value        : $(6)
     - SwPart_$(1)  :
         name         : Software Partition
-        type         : EditNum, INT, (0,127)
+        type         : EditNum, DEC, (0,127)
         help         : >
                        Specify software partition number
         condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFF
@@ -148,7 +148,7 @@ OS_TMPL: >
       value        : $(6)
   - SwPart_$(1)  :
       name         : Software Partition
-      type         : EditNum, INT, (0,127)
+      type         : EditNum, DEC, (0,127)
       help         : >
                      Specify software partition number
       length       : 0x01
@@ -175,7 +175,7 @@ OS_TMPL: >
   - SwPart_0_$(1) :
       name         : Software partition for normal OS Image)
       condition    : $FsType_$(1) == 3
-      type         : EditNum, INT, (0,127)
+      type         : EditNum, DEC, (0,127)
       help         : >
                      Specify software partition number
       length       : 0x01
@@ -186,7 +186,7 @@ OS_TMPL: >
   - LbaAddr_0_$(1) :
       name         : LBA address for normal OS Image)
       condition    : $FsType_$(1) == 3
-      type         : EditNum, INT, (0,0xFFFFFFFF)
+      type         : EditNum, DEC, (0,0xFFFFFFFF)
       help         : >
                      Specify LBA address where to find normal OS image
       length       : 0x04
@@ -205,7 +205,7 @@ OS_TMPL: >
   - SwPart_1_$(1) :
       name         : Software partition for trusty OS
       condition    : ($BootFlags_$(1) & 0x4 == 0x4) and ($FsType_$(1) == 3)
-      type         : EditNum, INT, (0,127)
+      type         : EditNum, DEC, (0,127)
       help         : >
                      Specify software partition number
       length       : 0x01
@@ -216,7 +216,7 @@ OS_TMPL: >
   - LbaAddr_1_$(1) :
       name         : LBA address for trusty OS
       condition    : ($BootFlags_$(1) & 0x4 == 0x4) and ($FsType_$(1) != 3)
-      type         : EditNum, INT, (0,0xFFFFFFFF)
+      type         : EditNum, DEC, (0,0xFFFFFFFF)
       help         : >
                      Specify LBA address where to find trusty OS image
       length       : 0x04
@@ -235,7 +235,7 @@ OS_TMPL: >
   - SwPart_2_$(1) :
       name         : Software partition for misc Image
       condition    : ($BootFlags_$(1) & 0x1 == 0x1) and ($FsType_$(1) == 3)
-      type         : EditNum, INT, (0,127)
+      type         : EditNum, DEC, (0,127)
       help         : >
                      Specify software partition number for OS A/B support
       length       : 0x01
@@ -246,7 +246,7 @@ OS_TMPL: >
   - LbaAddr_2_$(1) :
       name         : LBA address for misc image
       condition    : ($BootFlags_$(1) & 0x1 == 0x1) and ($FsType_$(1) == 3)
-      type         : EditNum, INT, (0,0xFFFFFFFF)
+      type         : EditNum, DEC, (0,0xFFFFFFFF)
       help         : >
                      Specify LBA address where to find misc image to support OS A/B
       length       : 0x04
