[CFL] Added support for mutiple VBT
This patch did the following

1) Added common routines LocateVbtByImageId to look for VBT image using
   ImageId provided by configuration data and GetVbtAddress.
2) GetVbtAddress routine will provide abstaction for all platforms
   irrespective of multiple VBT or single VBT used by the platform.
3) LocateVbtByImageId routine is moved from platform local function to
   common package.
4) VbtImageId configuration option defined in QEMU platform config is
   moved to common configuration in CfgData_Common.yaml
5) ApolloLake VBT ID selection is now done using configuration data.
6) Added latest VBT binary for CFL, WHL is using existing VBT.

Signed-off-by: Raghava Gudla <raghava.gudla@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
+++ b/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
@@ -49,6 +49,14 @@
                      Enable or disable Rpmb Key Provisioning
       length       : 0x01
       value        : 0
+  - VbtImageId   :
+      name         : Platform VBT table
+      type         : Combo
+      option       : 1:VBT Binary 1, 2:VBT Binary 2
+      help         : >
+                     Specify image ID for desired VBT binary
+      length       : 0x04
+      value        : 1
   - $ACTION      :
       page         : OS
   - CurrentBoot  :
