Add platform common TCC library Support
This adds a common TCC library for the same APIs on TGL and
EHL platforms.

Signed-off-by: leanshen <lean.sheng.tan@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
+++ b/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
@@ -57,6 +57,14 @@
                      Specify image ID for desired VBT binary
       length       : 0x04
       value        : 1
+  - TccMode      :
+      name         : TCC Enable
+      type         : Combo
+      option       : $EN_DIS
+      help         : >
+                     Enable/Disable TCC feature. 1:TCC Enabled, 0:TCC Disabled
+      length       : 0x04
+      value        : 0
   - $ACTION      :
       page         : OS
   - CurrentBoot  :
