--- a/Platform/CoffeelakeBoardPkg/CfgData/CfgData_Memory.yaml
+++ b/Platform/CoffeelakeBoardPkg/CfgData/CfgData_Memory.yaml
@@ -67,6 +67,14 @@
                      Indicates DqPinsInterleaved setting- board-dependent
       length       : 0x01
       value        : 0x1
+  - TsegSize     :
+      name         : Tseg Size
+      type         : Combo
+      option       : 0x0400000:4MB, 0x00800000:8MB, 0x01000000:16MB
+      help         : >
+                     Size of SMRAM memory reserved. 0x400000 for Release build and 0x1000000 for Debug build
+      length       : 0x04
+      value        : 0x01000000
   - MmioSize     :
       name         : MMIO Size
       type         : EditNum, HEX, (0,0xC00)
