[TGL] Add TCC V2 support
Update the TCC subregion layout.
Use the common TCC config data
Use the new BIOS settings from TCC subregion
Rename TCC variable to follow TCC V2 naming
Pending the FSP release for TCC V2 test.

Signed-off-by: Guo Dong <guo.dong@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgDataDef.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgDataDef.yaml
@@ -211,7 +211,7 @@ configs:
 
 
   - !include Platform/CommonBoardPkg/CfgData/CfgData_Platform.yaml
-
+  - !include Platform/CommonBoardPkg/CfgData/CfgData_Tcc.yaml
 
   - !include CfgData_Memory.yaml
 
