--- a/Platform/TigerlakeBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -10,9 +10,9 @@
 
 - $ACTION      :
     page         : OS
-- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,  16 ,    5   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
-- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,  16 ,    6   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
-- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,  16 ,    6   ,   1   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
-- !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,  16 ,    6   ,   2   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
-- !expand { BOOT_OPTION_TMPL : [ 4 ,   0    ,  16 ,    0   ,   0   ,    1  ,     1 ,     1 , '/boot/sbl_os' ] }
-- !expand { BOOT_OPTION_TMPL : [ 5 ,   0    ,  16 ,    0   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
+- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,  16 ,    5   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
+- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,  16 ,    6   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
+- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,  16 ,    6   ,   1   ,    0  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
+- !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,  16 ,    6   ,   2   ,    0  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
+- !expand { BOOT_OPTION_TMPL : [ 4 ,   0    ,  16 ,    0   ,   0   ,    1  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
+- !expand { BOOT_OPTION_TMPL : [ 5 ,   0    ,  16 ,    0   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os_2k' ] }
