[TGL-U] S0ix Support for TGL-U
Updated ACPI Tables, NVS data and FSP UPDs for S0ix support
S0ix is working on yocto through USB boot and windows through CPU M.2 NVME

Signed-off-by: jinjhuli <jin.jhu.lim@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgData_Features.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgData_Features.yaml
@@ -34,10 +34,18 @@
         help         : >
                        Enable/Disable MeasuredBoot feature. 1:MeasuredBoot Enabled (default), 0:MeasuredBoot Disabled
         length       : 1b
+    - LowPowerS0Idle   :
+        name         : Low Power S0 Idle Enable (S0ix)
+        type         : Combo
+        option       : $EN_DIS
+        help         : >
+                       Enable/Disable Low Power Idle feature. 1:Low Power S0 Idle Enabled, 0:Low Power S0 Idle Disabled
+        length       : 1b
     - Rsvd         :
         name         : Reserved
         type         : Reserved
         help         : >
                        reserved bits
-        length       : 30b
+        length       : 29b
+
 
