Update boot option Template
Update Boot Flags to list PreOs and Extra image.
Hide other options when preOS or Extra Image is selected.

Signed-off-by: Guo Dong <guo.dong@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
+++ b/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
@@ -30,10 +30,13 @@ BOOT_OPTION_TMPL: >
     - BootFlags_$(1) :
         name         : Boot Flags
         type         : Combo
-        option       : 0:Normal, 1:A/B support, 2:Crash OS, 4:Trusty support, 5:Trusty and A/B support, 16:Mender support
+        option       : 0:Normal, 4:PreOS support, 8:Extra image support, 12:PreOS and extra image support, 16:Mender support
         help         : >
                        Specify boot flags (options)
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFE
+                       When extra image or PreOS image is selected, need config them in next boot option with proper image type.
+                       Extra image means load and run extra image before normal OS image. The extra image will return to SBL and SBL will continue run normal OS.
+                       PreOs image means load and run PreOS image before normal OS image. SBL prepares normal OS info and passes to PreOS so the PreOs will not return to SBL.
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1E
         length       : 0x01
         value        : $(3)
     - Reserved_$(1) :
@@ -46,7 +49,7 @@ BOOT_OPTION_TMPL: >
         help         : >
                        Specify boot device type
         order        : 0000.0000
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFE
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1E
         length       : 0x01
         value        : $(4)
     - BootDeviceInstance_$(1) :
@@ -56,7 +59,7 @@ BOOT_OPTION_TMPL: >
         help         : >
                        Specify boot device instance when then are multiple instances
         order        : 0000.0000
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFE
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1E
         length       : 0x01
         value        : $(5)
     - HwPart_$(1)  :
@@ -68,7 +71,7 @@ BOOT_OPTION_TMPL: >
                        If boot device type is SPI, the hardware partition refers to SPI flash region- 0-Descriptor, 1-BIOS, 2-ME, 3-GbE, 4-PDR Regions.
                        If boot device type is SATA, the hardware partition refers to the SATA port number on the system; setting to 255 uses the first detected SATA device.
                        If boot device type is USB, the hardware partition refers to the order in which the USB block devices are detected when multiple USB block devices are connected.
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFE
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1E
         length       : 0x01
         value        : $(6)
     - SwPart_$(1)  :
@@ -77,7 +80,7 @@ BOOT_OPTION_TMPL: >
         help         : >
                        Specify software partition number. A value of 255 indicates raw booting via the absolute LBA instead of a relative LBA
                        (e.g. relative to a software partition's starting LBA).
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFF
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1F
         length       : 0x01
         value        : $(7)
     - FsType_$(1)  :
@@ -86,7 +89,7 @@ BOOT_OPTION_TMPL: >
         option       : 0:FAT, 1:EXT2, 2:AUTO, 3:RAW
         help         : >
                        Image is loaded from file system instead of raw data
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFE
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1E
         length       : 0x01
         value        : $(8)
     - BootImage_$(1) :
@@ -95,6 +98,6 @@ BOOT_OPTION_TMPL: >
         help         : >
                        Specify file name of normal OS or LBA address (16-byte max length).
                        For LBA address, please use HEX prefix "#0x". EX- #0x12345678
-        condition    : $BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) < 0xFF
+        condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1F
         length       : 0x10
         value        : $(9)
