[EHL] Add TCC V2 support
Add latest Intel® Time Coordinated Computing support for EHL.

Here are the changes:
- Update the TCC subregion layout
- Use the common TCC config data
- Use the common TCC library for RTCT table
- Support TCC DSO cfg, Cache cfg and CRL binaries loading
- Rename TCC variable to follow TCC V2 naming
- Increase the stage 2 size from 0x89000 to 0x91000 to accommodate
  the new changes
- Add latest FspmUpd and FspsUpd header files for TCC v2 support
  (will be removed once FSP github updated the latest EHL FSP package)
- Change default boot options for RTCM support

TCC mode is turned off by default.

Signed-off-by: Lean Sheng <lean.sheng.tan@intel.com>

--- a/Platform/ElkhartlakeBoardPkg/CfgData/CfgDataDef.yaml
+++ b/Platform/ElkhartlakeBoardPkg/CfgData/CfgDataDef.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader CFGDATA Default File.
 #
-#  Copyright (c) 2020, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2020 - 2021, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
@@ -210,6 +210,9 @@ configs:
 
 
   - !include Platform/CommonBoardPkg/CfgData/CfgData_Platform.yaml
+
+
+  - !include Platform/CommonBoardPkg/CfgData/CfgData_Tcc.yaml
 
 
   - !include CfgData_Memory.yaml
