--- a/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -11,7 +11,7 @@
     page         : OS
 - !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,  20 ,    5   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
 - !expand { BOOT_OPTION_TMPL : [ 1 , 0x9E    ,  16 ,    0   ,   0   ,    1  ,     1 ,     1 , '!IPFW/POSC' ] }
-- !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,  16 ,    0   ,   0   ,    1  ,     1 ,     1 , '/boot/sbl_os' ] }
+- !expand { BOOT_OPTION_TMPL : [ 2 , 0x1F   ,  16 ,    0   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_rtcm' ] }
 - !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,  16 ,    2   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
 - !expand { BOOT_OPTION_TMPL : [ 4 ,   0    ,  16 ,    6   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
 - !expand { BOOT_OPTION_TMPL : [ 5 ,   0    ,  16 ,    3   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
