[TGL] Disable DMIC by default
Asserting will occure when booting with legacy HD audio enabled.

Signed-off-by: Randy Lin <randy.lin@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -282,7 +282,14 @@
                      Enable/disable HD Audio DSP feature.
       length       : 0x01
       value        : 0x00
+  - PchHdaAudioLinkDmicEnable :
+      name         : Enable HD Audio DMIC_N
+      type         : EditNum, HEX, (0x00,0xFFFF)
+      help         : >
+                     Enable/disable HD Audio DMIC_N.
+      length       : 0x02
+      value        : { 0x00, 0x00 }
   - Dummy        :
-      length       : 0x3
+      length       : 0x1
       value        : 0x0
 
