[EHL] Adding option to select new gpio scheme
There is a discrepancy between how Linux reads GPIO
and how bootloader is presenting it. This causes Linux
distros to crash, even in the installer,unless a kernel
module parameter has been passed:
'module_blacklist=pinctrl_elkhartlake'

The customer, Red Hat, is using RHEL 8 4.18.0-315.
There appears to be a discrepancy between how Linux reads GPIO and how
the Intel BIOS is presenting it.

Signed-off-by: Ong Kok Tong <kok.tong.ong@intel.com>

--- a/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Features.yaml
+++ b/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Features.yaml
@@ -48,9 +48,16 @@
         help         : >
                        Enable/Disable Low Power Idle feature. 1:Low Power Idle Enabled, 0:Low Power Idle Disabled
         length       : 1b
+    - NewGpioSchemeEnable   :
+        name         : New GPIO Scheme Enable
+        type         : Combo
+        option       : $EN_DIS
+        help         : >
+                       Enable/Disable New GPIO Scheme. 1:New GPIO Scheme Enabled, 0:New GPIO Scheme Disabled
+        length       : 1b
     - Rsvd         :
         name         : Reserved
         type         : Reserved
         help         : >
                        reserved bits
-        length       : 26b
+        length       : 25b
